--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="single.html" class="block-20" style="background-image: url('images/diploma.jpg');">
+              <a href="" class="block-20" style="background-image: url('images/diploma.jpg');">
               </a>
               <div class="text mt-3 float-right d-block">
               	<div class="d-flex align-items-center mb-3 meta">
@@ -483,14 +483,14 @@
 	                </p>
                 </div>
                 <h3 class="heading"><a href="volunteership-section">Certfications and Recognitions</a></h3>
-                <p><a href="https://www.rgitcess.in/#/team2020">• Computer Engineering Students Society(CESS)- Marketing Manager and Digital Creative Secretary</a></p>
-				<p><a href="https://www.mctrgit.ac.in/information-technology">• Association of Budding Technocrats(ABIT)- Marketing Manager and Digital Media Secretary</a></p>
+                <p><a href="https://www.rgitcess.in/#/team2020"target="_blank">• Computer Engineering Students Society(CESS)- Marketing Manager and Digital Creative Secretary</a></p>
+				<p><a href="https://www.mctrgit.ac.in/information-technology"target="_blank">• Association of Budding Technocrats(ABIT)- Marketing Manager and Digital Media Secretary</a></p>
               </div>
             </div>
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry">
-              <a href="single.html" class="block-20" style="background-image: url('images/photog.png');">
+              <a href="https://www.instagram.com/perspectiveofasufi/l"target="_blank"> class="block-20" style="background-image: url('images/photog.png');">
               </a>
               <div class="text mt-3 float-right d-block">
               	<div class="d-flex align-items-center mb-3 meta">
@@ -500,7 +500,7 @@
 	                	<a href="#contact-section" class="meta-chat"><span class="icon-chat"></span> </a>
 	                </p>
                 </div>
-                <h3 class="heading"><a href="https://www.instagram.com/perspectiveofasufi/l">Photography and Writing</a></h3>
+                <h3 class="heading"><a href="https://www.instagram.com/perspectiveofasufi/l"target="_blank">Photography and Writing</a></h3>
                 <p>I also like Photography and writing about philosophy and poetry, check out this page!</p>
               </div>
             </div>
