--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry justify-content-end">
-              <a href="" class="block-20" style="background-image: url('images/diploma.jpg');">
+              <a href="https://drive.google.com/drive/folders/13_pVAoGwxkPnpD5NIgwpOH95n9nQo64Q?usp=drive_link" class="block-20" style="background-image: url('images/diploma.jpg');">
               </a>
               <div class="text mt-3 float-right d-block">
               	<div class="d-flex align-items-center mb-3 meta">
@@ -490,7 +490,7 @@
           </div>
           <div class="col-md-4 d-flex ftco-animate">
           	<div class="blog-entry">
-              <a href="https://www.instagram.com/perspectiveofasufi/l"target="_blank"> class="block-20" style="background-image: url('images/photog.png');">
+              <a href="https://www.instagram.com/perspectiveofasufi/l"target="_blank" class="block-20" style="background-image: url('images/photog.png');">
               </a>
               <div class="text mt-3 float-right d-block">
               	<div class="d-flex align-items-center mb-3 meta">
