--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 		            	<li class="d-flex"><span>Date of birth:</span> <span>April 17, 1998</span></li>
 		            	<li class="d-flex"><span>Address:</span> <span>Boston, Massachusetts, USA</span></li>
 		            	<li class="d-flex"><span>Zip code:</span> <span>02135</span></li>
-		            	<li class="d-flex"><span>Email:</span> <span>shaikh.ra@northeastern.edu</span></li>
+		            	<li class="d-flex"><span>Email:</span> <span>raheb014@gmail.com</span></li>
 		            	<li class="d-flex"><span>Phone: </span> <span>+18572306232</span></li>
 		            </ul>
 		          </div>
@@ -119,7 +119,7 @@
 	                <span class="number" data-number="6">0</span>
 	                <span>years of IT experience</span>
                 </p>
-                <p><a href="images/ShaikhRahhebResume101824.pdf" class="btn btn-primary py-3 px-3"download="ShaikhRahhebResume.pdf">Download CV</a></p>
+                <p><a href="images/Rahheb_Shaikh_Resume.pdf" class="btn btn-primary py-3 px-3"download="ShaikhRahhebResume.pdf">Download CV</a></p>
               </div>
 	          </div>
 	        </div>
@@ -207,7 +207,7 @@
     		</div>
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="images/ShaikhRahhebResume101824.pdf" class="btn btn-primary py-3 px-3"download="ShaikhRahhebResume.pdf" class="btn btn-primary py-4 px-5">Download CV</a></p>
+    				<p><a href="images/Rahheb_Shaikh_Resume.pdf" class="btn btn-primary py-3 px-3"download="Rahheb_Shaikh_Resume.pdf" class="btn btn-primary py-4 px-5">Download CV</a></p>
     			</div>
     		</div>
     	</div>
@@ -531,7 +531,7 @@
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18">
               <div class="text">
-                <strong class="number" data-number="56">0</strong>
+                <strong class="number" data-number="156">0</strong>
                 <span>Cat pets</span>
               </div>
             </div>
@@ -539,7 +539,7 @@
           <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
             <div class="block-18">
               <div class="text">
-                <strong class="number" data-number="87">0</strong>
+                <strong class="number" data-number="187">0</strong>
                 <span>Cups of coffee</span>
               </div>
             </div>
@@ -554,7 +554,7 @@
 					<div class="col-md-7 ftco-animate text-center">
 						<h2>I'm currently<span>Available</span> for full-time opportunities</h2>
 						<p>Contact me through email</p>
-						<p class="mb-0"><a href="mailto:shaikh.ra@northeastern.edu" target="_blank" class="btn btn-primary py-3 px-5">shaikh.ra@northeastern.edu</a></p>
+						<p class="mb-0"><a href="mailto:shaikh.ra@northeastern.edu" target="_blank" class="btn btn-primary py-3 px-5">raheb014@gmail.com</a></p>
 					</div>
 				</div>
 			</div>
@@ -586,7 +586,7 @@
           			<span class="icon-phone2"></span>
           		</div>
           		<h3 class="mb-4">Contact Number</h3>
-	            <p><a href="tel://1234567920">+1(857)230-6232</a></p>
+	            <p><a href="tel://1234567920">+1.857.230.6232</a></p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -595,7 +595,7 @@
           			<span class="icon-paper-plane"></span>
           		</div>
           		<h3 class="mb-4">Email Address</h3>
-	            <p><a href="mailto:shaikh.ra@northeastern.edu"target="_blank">shaikh.ra@northeastern.edu</a></p>
+	            <p><a href="mailto:raheb014@gmail.com"target="_blank">raheb014@gmail.com</a></p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -684,7 +684,7 @@
 	              <ul>
 	                <li><span class="icon icon-map-marker"></span><span class="text">Boston, Massachusetts, USA</span></li>
 	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+1(857)230-6232</span></a></li>
-	                <li><a href="#mailto:shaikh.ra@northeastern.edu"target="_blank"><span class="icon icon-envelope"></span><span class="text">shaikh.ra@northeastern.edu</span></a></li>
+	                <li><a href="#mailto:raheb014@gmail.com"target="_blank"><span class="icon icon-envelope"></span><span class="text">raheb014@gmail.com</span></a></li>
 	              </ul>
 	            </div>
             </div>
