--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 		          		<span class="subheading">Hello!</span>
 			            <h1 class="mb-4 mt-3">I'm <span>Rahheb Shaikh</span></h1>
 			            <h2 class="mb-4">A data enthusiast</h2>
-			            <p><a href="#contact-section" class="btn btn-primary py-3 px-4">Hire me</a> <a href="#projects-section" class="btn btn-white btn-outline-white py-3 px-4">My projects</a></p>
+			            <p><a href="#contact-section" class="btn btn-primary py-3 px-4">Contact me</a> <a href="#projects-section" class="btn btn-white btn-outline-white py-3 px-4">My projects</a></p>
 		            </div>
 		          </div>
 	        	</div>
@@ -119,7 +119,7 @@
 	                <span class="number" data-number="6">0</span>
 	                <span>years of IT experience</span>
                 </p>
-                <p><a href="images/Rahheb_Shaikh_Resume.pdf" class="btn btn-primary py-3 px-3"download="ShaikhRahhebResume.pdf">Download CV</a></p>
+                <p><a href="images/Rahheb_Shaikh_resumé.pdf" class="btn btn-primary py-3 px-3"download="Rahheb_Shaikh_resumé.pdf">Download CV</a></p>
               </div>
 	          </div>
 	        </div>
@@ -207,7 +207,7 @@
     		</div>
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="images/Rahheb_Shaikh_Resume.pdf" class="btn btn-primary py-3 px-3"download="Rahheb_Shaikh_Resume.pdf" class="btn btn-primary py-4 px-5">Download CV</a></p>
+    				<p><a href="images/Rahheb_Shaikh_resumé.pdf" class="btn btn-primary py-3 px-3"download="Rahheb_Shaikh_resumé.pdf" class="btn btn-primary py-4 px-5">Download CV</a></p>
     			</div>
     		</div>
     	</div>
