--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
 					</div>
 					<div class="col-md-6 animate-box">
 						<div class="progress-wrap ftco-animate">
-							<h3>My SQL(5 years)</h3>
+							<h3>Structured Query Language(SQL)(5 years)</h3>
 							<div class="progress">
 							 	<div class="progress-bar color-5" role="progressbar" aria-valuenow="90"
 							  	aria-valuemin="0" aria-valuemax="100" style="width:90%">
