--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 	                <span class="number" data-number="6">0</span>
 	                <span>years of IT experience</span>
                 </p>
-                <p><a href="images/Rahheb_Shaikh_resumé.pdf" class="btn btn-primary py-3 px-3"download="Rahheb_Shaikh_resumé.pdf">Download CV</a></p>
+                <p><a href="images/Rahheb_Shaikh_resumé.pdf" class="btn btn-primary py-3 px-3"download="Rahheb_Shaikh_Résumé.pdf">Download CV</a></p>
               </div>
 	          </div>
 	        </div>
@@ -207,7 +207,7 @@
     		</div>
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="images/Rahheb_Shaikh_resumé.pdf" class="btn btn-primary py-3 px-3"download="Rahheb_Shaikh_resumé.pdf" class="btn btn-primary py-4 px-5">Download CV</a></p>
+    				<p><a href="images/Rahheb_Shaikh_Résumé.pdf" class="btn btn-primary py-3 px-3"download="Rahheb_Shaikh_Résumé.pdf" class="btn btn-primary py-4 px-5">Download CV</a></p>
     			</div>
     		</div>
     	</div>
