--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
 	                	<a href="#contact-section" class="meta-chat"><span class="icon-chat"></span> </a>
 	                </p>
                 </div>
-                <h3 class="heading"><a href="single.html">Detection of Dermatological disorders through Image-Processing and Machine Learning.</a></h3>
+                <h3 class="heading"><a href="https://drive.google.com/drive/folders/13_pVAoGwxkPnpD5NIgwpOH95n9nQo64Q?usp=drive_link">Detection of Dermatological disorders through Image-Processing and Machine Learning.</a></h3>
                 <p>It is an extremely bulky process to predict a disease based on the visual diagnosis of cell type with precision or accuracy, especially when multiple features are associated.</p>
               </div>
             </div>
