--- a/index.html
+++ b/index.html
@@ -116,10 +116,10 @@
 	          <div class="counter-wrap ftco-animate d-flex mt-md-3">
               <div class="text">
               	<p class="mb-4">
-	                <span class="number" data-number="6">0</span>
+	                <span class="number" data-number="3.8">0</span>
 	                <span>years of IT experience</span>
                 </p>
-                <p><a href="images/Rahheb_Shaikh_resumé.pdf" class="btn btn-primary py-3 px-3"download="Rahheb_Shaikh_Résumé.pdf">Download CV</a></p>
+                <p><a href="images/Rahheb Shaikh Resumé.pdf" class="btn btn-primary py-3 px-3"download="Rahheb Shaikh Resumé.pdf">Download CV</a></p>
               </div>
 	          </div>
 	        </div>
@@ -152,32 +152,45 @@
     				</div> -->
 				</div>	
 					<div class="resume-wrap ftco-animate">
-    					<span class="date">2024-Present</span>
+    					<span class="date">October 2024 - Present</span>
     					<h2>Rebecca Everlene Trust Company - Boston, MA, USA</h2>
     					<span class="position">Data Analyst</span>
     					<p class="mt-4">Utilized Python (Pandas, NumPy), SQL, and Excel to analyze data for 453 colleges, optimizing the ASPECTS app for over 10,000 students annually by developing 5+ accurate data models; collaborated with cross-functional teams using 
 							Tableau to enhance STEAM educational support for 500+ students across 10+ initiatives.</p>
     				</div>
+
+			
+		         	</div>
+					<div class="resume-wrap ftco-animate">
+    					<span class="date">October 2023 - May 2024</span>
+    					<h2>Taxgpt.ca</h2>
+    					<span class="position">Data Analyst and Scientist</span>
+    					<p class="mt-4">Relevant Experience - Utilized Python (pandas, NumPy, NLTK) to automate data preprocessing workflows, reducing manual data cleaning time by 40%; applied NLP techniques (LDA, NMF, LSA) to analyze 11,500+ tax-related queries, 
+						        segmenting data into 7 key topics and improving information retrieval efficiency by 35%; developed machine learning models, achieving a 0.512 coherence score and optimizing tax query categorization accuracy by 25%; designed 
+						        10+ interactive Tableau & Seaborn visualizations, enhancing stakeholder decision-making and executive reporting efficiency by 30%.</p>
+    				</div>
+			
     			
 				</div>
 					<div class="resume-wrap ftco-animate">
-    					<span class="date">2022-2024</span>
+    					<span class="date">September 2022 - May 2024</span>
     					<h2>Master's Degree in Informatics - Data Analysis</h2>
     					<span class="position">Northeastern University</span>
     					<p class="mt-4">Relevant Experience - Decision Support and Business Intelligence, Data Management and Big Data, Data Mining Techniques and Applications, Predictive Analytics, Communication and Visualization for Data Analytics.</p>
     				</div>
 				
 				    <div class="resume-wrap ftco-animate">
-					     <span class="date">2019-2022</span>
+					     <span class="date">March 2020 - August 2022</span>
 					    <h2>Textile Manufacturing Co. - Mumbai, MH, India</h2>
 					    <span class="position">Data and Business Analyst</span>
-					    <p class="mt-4">Relevant Experience - Utilized Excel and Python (Pandas, NumPy, Matplotlib) to implement digital data management systems, optimize inventory and supply chain processes, create visualizations for stakeholders, and increase the client 
-							base from 17 to 23, achieving a 70% reduction in supply chain costs and boosting profit margins from 5% to 7% per unit sold through data-driven cost optimization.</p>
+					    <p class="mt-4">Relevant Experience - Migrated legacy systems to AWS (RDS, S3) and Snowflake, leveraging SQL, Python (Pandas, NumPy), and Tableau to optimize inventory and supply chain processes, automate data management, 
+	                                                    and create actionable visualizations; utilized Salesforce CRM to expand the client base from 17 to 23, achieving a 70% reduction in supply chain costs and increasing profit margins by 2% per unit sold through 
+						            data-driven cost optimization.</p>
 				    </div>
 
 
 					<div class="resume-wrap ftco-animate">
-    					<span class="date">2017-2021</span>
+    					<span class="date">July 2017 - May 2021</span>
     					<h2>Bachelor's of Engineering Degree in Information Technology</h2>
     					<span class="position">University of Mumbai</span>
     					<p class="mt-4">Relevant Experience - Machine Learning, Data Structures, Algorithms, Computer Networks, Database Management Systems, Software Engineering, Probability and Statistics, Engineering Mathematics, Artificial Intelligence (AI).</p>
@@ -207,7 +220,7 @@
     		</div>
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="images/Rahheb_Shaikh_Résumé.pdf" class="btn btn-primary py-3 px-3"download="Rahheb_Shaikh_Résumé.pdf" class="btn btn-primary py-4 px-5">Download CV</a></p>
+    				<p><a href="images/Rahheb Shaikh Resumé.pdf" class="btn btn-primary py-3 px-3"download="Rahheb Shaikh Resumé.pdf" class="btn btn-primary py-4 px-5">Download CV</a></p>
     			</div>
     		</div>
     	</div>
@@ -647,8 +660,8 @@
               <h2 class="ftco-heading-2">About</h2>
               <p>This is my portfolio website and all the information regarding my socials can be found here</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
-                <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-                <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
+                <li class="ftco-animate"><a href="https://www.linkedin.com/in/rahheb-shaikh/"><span class="icon-linkedin"></span></a></li>
+                <li class="ftco-animate"><a href="raheb014@gmail.com"><span class="icon-gmail"></span></a></li>
                 <li class="ftco-animate"><a href="https://www.instagram.com/perspectiveofasufi/"target="_blank"><span class="icon-instagram"></span></a></li>
               </ul>
             </div>
