--- a/index.html
+++ b/index.html
@@ -178,17 +178,19 @@
     					<span class="position">Northeastern University</span>
     					<p class="mt-4">Relevant Experience - Decision Support and Business Intelligence, Data Management and Big Data, Data Mining Techniques and Applications, Predictive Analytics, Communication and Visualization for Data Analytics.</p>
     				</div>
-				
-				    <div class="resume-wrap ftco-animate">
-					     <span class="date">March 2020 - August 2022</span>
-					    <h2>Textile Manufacturing Co. - Mumbai, MH, India</h2>
-					    <span class="position">Data and Business Analyst</span>
-					    <p class="mt-4">Relevant Experience - Migrated legacy systems to AWS (RDS, S3) and Snowflake, leveraging SQL, Python (Pandas, NumPy), and Tableau to optimize inventory and supply chain processes, automate data management, 
+
+	                        </div>
+				        <div class="resume-wrap ftco-animate">
+					<span class="date">March 2020 - August 2022</span>
+					<h2>Textile Manufacturing Co. - Mumbai, MH, India</h2>
+					<span class="position">Data and Business Analyst</span>
+					<p class="mt-4">Relevant Experience - Migrated legacy systems to AWS (RDS, S3) and Snowflake, leveraging SQL, Python (Pandas, NumPy), and Tableau to optimize inventory and supply chain processes, automate data management, 
 	                                                    and create actionable visualizations; utilized Salesforce CRM to expand the client base from 17 to 23, achieving a 70% reduction in supply chain costs and increasing profit margins by 2% per unit sold through 
 						            data-driven cost optimization.</p>
-				    </div>
+				</div>
 
 
+	                        </div>    
 					<div class="resume-wrap ftco-animate">
     					<span class="date">July 2017 - May 2021</span>
     					<h2>Bachelor's of Engineering Degree in Information Technology</h2>
@@ -661,7 +663,7 @@
               <p>This is my portfolio website and all the information regarding my socials can be found here</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="https://www.linkedin.com/in/rahheb-shaikh/"><span class="icon-linkedin"></span></a></li>
-                <li class="ftco-animate"><a href="raheb014@gmail.com"><span class="icon-gmail"></span></a></li>
+                <li class="ftco-animate"><a href="mailto:raheb014@gmail.com"><span class="icon-mail"></span></a></li>
                 <li class="ftco-animate"><a href="https://www.instagram.com/perspectiveofasufi/"target="_blank"><span class="icon-instagram"></span></a></li>
               </ul>
             </div>
