--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
           </div>
         </div>
     		<div class="row">
-    			<div class="col-md-6">
+    			<div class="col-12">
     				
 					
 
