--- a/index.html
+++ b/index.html
@@ -154,8 +154,9 @@
     					<span class="date">October 2024 - Present</span>
     					<h2>Rebecca Everlene Trust Company - Boston, MA, USA</h2>
     					<span class="position">Data Analyst</span>
-    					<p class="mt-4">Utilized Python (Pandas, NumPy), SQL, and Excel to analyze data for 453 colleges, optimizing the ASPECTS app for over 10,000 students annually by developing 5+ accurate data models; collaborated with cross-functional teams using 
-							Tableau to enhance STEAM educational support for 500+ students across 10+ initiatives.</p>
+    					<p class="mt-4">Extracted and analyzed data from 4,000+ companies using Python (BeautifulSoup, Pandas) and SQL (MySQL, PostgreSQL), achieving 98% data accuracy and improving data integrity across workflows; developed Excel-based pivot 
+						        tables and Tableau visualizations to enhance decision-making for 10,000+ students annually on college relocation and cost assessments; standardized and cleaned datasets for 2,500 Illinois-based and 1,500 Hawaii-based 
+						        companies, increasing research usability by 95%; automated data reporting workflows using Python and SQL, reducing manual work by 30% and cutting report generation time by 50%.</p>
     				</div>
 
 			
