--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
     					<span class="date">October 2024 - Present</span>
     					<h2>Rebecca Everlene Trust Company - Boston, MA, USA</h2>
     					<span class="position">Data Analyst</span>
-    					<p class="mt-4">Extracted and analyzed data from 4,000+ companies using Python (BeautifulSoup, Pandas) and SQL (MySQL, PostgreSQL), achieving 98% data accuracy and improving data integrity across workflows; developed Excel-based pivot 
+    					<p class="mt-4">Relevant Experience - Extracted and analyzed data from 4,000+ companies using Python (BeautifulSoup, Pandas) and SQL (MySQL, PostgreSQL), achieving 98% data accuracy and improving data integrity across workflows; developed Excel-based pivot 
 						        tables and Tableau visualizations to enhance decision-making for 10,000+ students annually on college relocation and cost assessments; standardized and cleaned datasets for 2,500 Illinois-based and 1,500 Hawaii-based 
 						        companies, increasing research usability by 95%; automated data reporting workflows using Python and SQL, reducing manual work by 30% and cutting report generation time by 50%.</p>
     				</div>
