--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 				
 					<div class="resume-wrap ftco-animate">
     					<span class="date">September 2022 - May 2024</span>
-    					<h2>Master's of Science Degree in CPS Informatics - Data Analysis and Data Science</h2>
+    					<h2>Master's of Science in CPS Informatics - Data Analysis and Data Science</h2>
     					<span class="position">Northeastern University</span>
     					<p class="mt-4">Relevant Experience - Decision Support and Business Intelligence, Data Management and Big Data, Data Mining Techniques and Applications, Predictive Analytics, Communication and Visualization for Data Analytics.</p>
     				</div>
