--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 					<div class="resume-wrap ftco-animate">
     					<span class="date">September 2022 - May 2024</span>
     					<h2>Master's of Science in CPS Informatics - Data Analysis and Data Science</h2>
-    					<span class="position">Northeastern University</span>
+    					<span class="position">Northeastern University - Boston, MA</span>
     					<p class="mt-4">Relevant Experience - Decision Support and Business Intelligence, Data Management and Big Data, Data Mining Techniques and Applications, Predictive Analytics, Communication and Visualization for Data Analytics.</p>
     				</div>
 
@@ -194,7 +194,7 @@
 					<div class="resume-wrap ftco-animate">
     					<span class="date">July 2017 - May 2021</span>
     					<h2>Bachelor's of Engineering Degree in Information Technology</h2>
-    					<span class="position">University of Mumbai</span>
+    					<span class="position">University of Mumbai - Mumbai, MH</span>
     					<p class="mt-4">Relevant Experience - Machine Learning, Data Structures, Algorithms, Computer Networks, Database Management Systems, Software Engineering, Probability and Statistics, Engineering Mathematics, Artificial Intelligence (AI).</p>
     				</div>
 				</div>
