--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
     
 					<div class="resume-wrap ftco-animate">
     					<span class="date">July 2017 - May 2021</span>
-    					<h2>Bachelor's of Engineering Degree in Information Technology</h2>
+    					<h2>Bachelor's of Engineering in Information Technology</h2>
     					<span class="position">University of Mumbai - Mumbai, MH</span>
     					<p class="mt-4">Relevant Experience - Machine Learning, Data Structures, Algorithms, Computer Networks, Database Management Systems, Software Engineering, Probability and Statistics, Engineering Mathematics, Artificial Intelligence (AI).</p>
     				</div>
