--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 			
 					<div class="resume-wrap ftco-animate">
     					<span class="date">October 2023 - May 2024</span>
-    					<h2>Taxgpt.ca</h2>
+    					<h2>Taxgpt.ca - Co-op Internship</h2>
     					<span class="position">Data Analyst and Scientist</span>
     					<p class="mt-4">Relevant Experience - Utilized Python (pandas, NumPy, NLTK) to automate data preprocessing workflows, reducing manual data cleaning time by 40%; applied NLP techniques (LDA, NMF, LSA) to analyze 11,500+ tax-related queries, 
 						        segmenting data into 7 key topics and improving information retrieval efficiency by 35%; developed machine learning models, achieving a 0.512 coherence score and optimizing tax query categorization accuracy by 25%; designed 
