--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 		            	<li class="d-flex"><span>Date of birth:</span> <span>April 17, 1998</span></li>
 		            	<li class="d-flex"><span>Address:</span> <span>Boston, Massachusetts, USA</span></li>
 		            	<li class="d-flex"><span>Zip code:</span> <span>02135</span></li>
-		            	<li class="d-flex"><span>Email:</span> <span>raheb014@gmail.com</span></li>
+		            	<li class="d-flex"><span>Email:</span> <span>shaikhrahheb@gmail.com</span></li>
 		            	<li class="d-flex"><span>Phone: </span> <span>+18572306232</span></li>
 		            </ul>
 		          </div>
@@ -569,7 +569,7 @@
 					<div class="col-md-7 ftco-animate text-center">
 						<h2>I'm currently<span>Available</span> for full-time opportunities</h2>
 						<p>Contact me through email</p>
-						<p class="mb-0"><a href="mailto:shaikh.ra@northeastern.edu" target="_blank" class="btn btn-primary py-3 px-5">raheb014@gmail.com</a></p>
+						<p class="mb-0"><a href="mailto:shaikh.ra@northeastern.edu" target="_blank" class="btn btn-primary py-3 px-5">shaikhrahheb@gmail.com</a></p>
 					</div>
 				</div>
 			</div>
@@ -610,7 +610,7 @@
           			<span class="icon-paper-plane"></span>
           		</div>
           		<h3 class="mb-4">Email Address</h3>
-	            <p><a href="mailto:raheb014@gmail.com"target="_blank">raheb014@gmail.com</a></p>
+	            <p><a href="mailto:shaikhrahheb@gmail.com"target="_blank">shaikhrahheb@gmail.com</a></p>
 	          </div>
           </div>
           <div class="col-md-6 col-lg-3 d-flex ftco-animate">
@@ -663,7 +663,7 @@
               <p>This is my portfolio website and all the information regarding my socials can be found here</p>
               <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
                 <li class="ftco-animate"><a href="https://www.linkedin.com/in/rahheb-shaikh/"><span class="icon-linkedin"></span></a></li>
-                <li class="ftco-animate"><a href="mailto:raheb014@gmail.com"><span class="icon-envelope"></span></a></li>
+                <li class="ftco-animate"><a href="mailto:shaikhrahheb@gmail.com"><span class="icon-envelope"></span></a></li>
                 <li class="ftco-animate"><a href="https://www.instagram.com/perspectiveofasufi/"target="_blank"><span class="icon-instagram"></span></a></li>
               </ul>
             </div>
@@ -699,7 +699,7 @@
 	              <ul>
 	                <li><span class="icon icon-map-marker"></span><span class="text">Boston, Massachusetts, USA</span></li>
 	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+1(857)230-6232</span></a></li>
-	                <li><a href="#mailto:raheb014@gmail.com"target="_blank"><span class="icon icon-envelope"></span><span class="text">raheb014@gmail.com</span></a></li>
+	                <li><a href="#mailto:shaikhrahheb@gmail.com"target="_blank"><span class="icon icon-envelope"></span><span class="text">shaikhrahheb@gmail.com</span></a></li>
 	              </ul>
 	            </div>
             </div>
