--- a/index.html
+++ b/index.html
@@ -155,13 +155,13 @@
     					<h2>Phoenix Solution Inc. - Boston, MA, USA (Remote)</h2>
     					<span class="position">Data Analyst</span>
     					<p class="mt-4">Relevant Experience - 
-							• Designed SQL pipelines and automated workflows in Python (pandas, NumPy), reducing manual reporting by 45% and enabling real-time weekly insights.
-							• Built and deployed Power BI and Tableau dashboards integrating KPIs across finance, HR, and operations, improving decision-making speed by 35% and reducing ad-hoc requests by 50%.
-							• Implemented data validation and governance practices with Excel (Power Query, Pivot Tables) and dbt, ensuring 99% accuracy in reconciliations and compliance reporting.
-							• Facilitated stakeholder workshops, gathering requirements and translating them into analytics roadmaps, accelerating delivery timelines by 25% and improving client satisfaction by 20%.
-							• Conducted root cause analysis on reporting discrepancies, implementing controls that eliminated 90% of recurring data errors.
-							• Partnered with cross-functional teams to design KPI frameworks and ensure executive reporting aligned with organizational priorities.
-							• Prepared technical documentation and process flows to streamline knowledge transfer and support onboarding of new analysts.</p>
+							<br>• Designed SQL pipelines and automated workflows in Python (pandas, NumPy), reducing manual reporting by 45% and enabling real-time weekly insights.
+							<br>• Built and deployed Power BI and Tableau dashboards integrating KPIs across finance, HR, and operations, improving decision-making speed by 35% and reducing ad-hoc requests by 50%.
+							<br>• Implemented data validation and governance practices with Excel (Power Query, Pivot Tables) and dbt, ensuring 99% accuracy in reconciliations and compliance reporting.
+							<br>• Facilitated stakeholder workshops, gathering requirements and translating them into analytics roadmaps, accelerating delivery timelines by 25% and improving client satisfaction by 20%.
+							<br>• Conducted root cause analysis on reporting discrepancies, implementing controls that eliminated 90% of recurring data errors.
+							<br>• Partnered with cross-functional teams to design KPI frameworks and ensure executive reporting aligned with organizational priorities.
+							<br>• Prepared technical documentation and process flows to streamline knowledge transfer and support onboarding of new analysts.</p>
     				</div>
 
 					
