--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 	                <span class="number" data-number="4">0</span>
 	                <span>years of IT experience</span>
                 </p>
-                <p><a href="images/Rahheb Shaikh Resumé.pdf" class="btn btn-primary py-3 px-3"download="Rahheb Shaikh Resumé.pdf">Download CV</a></p>
+                <p><a href="images/Rahheb Shaikh Resume.pdf" class="btn btn-primary py-3 px-3"download="Rahheb Shaikh Resume.pdf">Download CV</a></p>
               </div>
 	          </div>
 	        </div>
@@ -205,7 +205,7 @@
 
 	    
 				        <div class="resume-wrap ftco-animate">
-    					<span class="date">October 2024 - Present</span>
+    					<span class="date">March 2021 - August 2022</span>
     					<h2>Textile Manufacturing Co. - Mumbai, MH, India</h2>
     					<span class="position">Data Analyst</span>
     					<p class="mt-4">Relevant Experience: 
@@ -250,7 +250,7 @@
     		</div>
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="images/Rahheb Shaikh Resumé.pdf" class="btn btn-primary py-3 px-3"download="Rahheb Shaikh Resumé.pdf" class="btn btn-primary py-4 px-5">Download CV</a></p>
+    				<p><a href="images/Rahheb Shaikh Resume.pdf" class="btn btn-primary py-3 px-3"download="Rahheb Shaikh Resume.pdf" class="btn btn-primary py-4 px-5">Download CV</a></p>
     			</div>
     		</div>
     	</div>
